istio/proxy/stats.yaml
stats_config:
  use_all_default_tags: false
  stats_tags:
    - tag_name: response_code
      #regex: "_rq(_(\\d{3}))$"
      regex: "(response_code=\\.=(.+?);\\.;)"
      #regex: "_rq(_(\\d{3}))$|(response_code=\\.=(.+?);\\.;)"
      #regex: response_code=\.=(.+?);\.;|_rq_(\d{3})$
    # - tag_name: response_code
    #   #regex: "_rq(_(\\d{3}))$"
    #   regex: "_rq(_(\\d{3}))$"
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9902
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: default_service
                http_filters:
                  - name: istio.stats
                    typedConfig:
                      '@type': type.googleapis.com/stats.PluginConfig
                      disableHostHeaderFallback: true
                      gracefulDeletionInterval: 6s
                      rotationInterval: 10s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: staticreply-10080
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 10080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: default_service
      load_assignment:
        cluster_name: default_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 10080
